module-1/apps/customers/ingress/customer-ingress-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: customer-header               
  namespace: apps                       
spec:
  headers:                              
    customResponseHeaders:
      X-HEADER-APP: "Customer API"

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-customers
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.traefik.${EXTERNAL_IP}.sslip.io`) && PathPrefix(`/customers`)
      services:
        - name: customer-app
          port: 3000
      middlewares:
        - name: customer-header
  tls:
    certResolver: le
